--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <h1>This is my first project on cicd pipeline</h1>
         <p>Hello from CI/CD Docker Container!</p>
         <p>This is my first CI/CD pipeline and I'm serving this website from a Docker container.</p>
-        <p> Hi, I am new developer<p>
+        <p> Hi, I am new developer</p>
     </div>
 </body>
 </html>
